[gd_scene load_steps=6 format=3 uid="uid://blogvt3aumpmv"]

[ext_resource type="Script" path="res://scenes/ui/menu/option_menu.gd" id="1_ak7jx"]
[ext_resource type="PackedScene" uid="uid://dpo66v51ji0o4" path="res://scenes/ui/customs/custom_label.tscn" id="1_gkgix"]
[ext_resource type="PackedScene" uid="uid://duhsnn2f3traa" path="res://scenes/ui/customs/custom_button.tscn" id="1_jq4oj"]
[ext_resource type="PackedScene" uid="uid://di4cxfi35whxc" path="res://scenes/ui/customs/custom_options.tscn" id="2_8cpov"]
[ext_resource type="PackedScene" uid="uid://dxuaos18hx233" path="res://scenes/ui/customs/custom_header.tscn" id="2_wod1m"]

[node name="option_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ak7jx")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="HeaderLabel" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_wod1m")]
unique_name_in_owner = true
layout_mode = 2

[node name="Separator6" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MusicLabel" parent="MarginContainer/VBoxContainer" instance=ExtResource("1_gkgix")]
unique_name_in_owner = true
layout_mode = 2

[node name="MusicMargin" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 300
theme_override_constants/margin_right = 300

[node name="MusicSlider" type="HSlider" parent="MarginContainer/VBoxContainer/MusicMargin"]
unique_name_in_owner = true
layout_mode = 2

[node name="SoundLabel" parent="MarginContainer/VBoxContainer" instance=ExtResource("1_gkgix")]
unique_name_in_owner = true
layout_mode = 2

[node name="SoundMargin" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 300
theme_override_constants/margin_right = 300

[node name="SoundSlider" type="HSlider" parent="MarginContainer/VBoxContainer/SoundMargin"]
unique_name_in_owner = true
layout_mode = 2

[node name="ResolutionsOptions" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_8cpov")]
unique_name_in_owner = true
layout_mode = 2

[node name="Separator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="FullscreenButton" parent="MarginContainer/VBoxContainer" instance=ExtResource("1_jq4oj")]
unique_name_in_owner = true
layout_mode = 2

[node name="Separator2" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="KeybindsButton" parent="MarginContainer/VBoxContainer" instance=ExtResource("1_jq4oj")]
unique_name_in_owner = true
layout_mode = 2

[node name="Separator5" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BackButton" parent="MarginContainer/VBoxContainer" instance=ExtResource("1_jq4oj")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[connection signal="value_changed" from="MarginContainer/VBoxContainer/MusicMargin/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/SoundMargin/SoundSlider" to="." method="_on_sound_slider_value_changed"]
[connection signal="button_pressed" from="MarginContainer/VBoxContainer/FullscreenButton" to="." method="_on_fullscreen_button_button_pressed"]
[connection signal="button_pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_button_pressed"]
